@@ -44,8 +44,13 @@ TARGET_LINK_LIBRARIES(unihan_search_db Unihan)
 
 
 IF(NOT DEFINED LIB_INSTALL_DIR)
-    SET(LIB_INSTALL_DIR lib)
-    ADD_DEFINITIONS(-DLIB_INSTALL_DIR='"${LIB_INSTALL_DIR}"')
+    IF( $ENV{MACHTYPE} MATCHES "64")
+	SET(LIB_INSTALL_DIR lib64)
+	ADD_DEFINITIONS(-DLIB_INSTALL_DIR='"${LIB_INSTALL_DIR}"')
+    ELSE( $ENV{MACHTYPE} MATCHES "64")
+	SET(LIB_INSTALL_DIR lib)
+	ADD_DEFINITIONS(-DLIB_INSTALL_DIR='"${LIB_INSTALL_DIR}"')
+    ENDIF( $ENV{MACHTYPE} MATCHES "64")
 ENDIF(NOT DEFINED LIB_INSTALL_DIR)
 
 
